# turbocharger-template-dioxus

./: Cargo.toml  Dioxus.toml  README.md  backend_api.rs  migrations.toml  package.json  tailwind.config.js  vite.config.ts  web-test-runner.config.js
.github/workflows/: ci.yml
src/: app.rs  main.rs  server.rs  wasm.rs
src-frontend/: index.html  index.js
src-frontend/tests/: turbocharger.test.js
src/app/: connection_info.rs  connection_local.rs  stream.rs  stream_result.rs  turbosql.rs
